New random functions

--- a/Makefile-win32
+++ b/Makefile-win32
@@ -61,7 +61,7 @@ CSOUNDLIB_OBJ =	Engine/auxfd.o Engine/cfgvar.o Engine/entry1.o		\
 		OOps/vbap_eight.o OOps/vbap_four.o OOps/vbap_sixteen.o	\
 		OOps/vbap_zak.o OOps/vdelay.o OOps/vpvoc.o		\
 		Top/argdecode.o Top/cscore_internal.o Top/cscorfns.o	\
-		Top/csmodule.o Top/csound.o				\
+		Top/csmodule.o Top/csound.o OOps/random.o		\
 		Top/getstring.o Top/main.o Top/new_opts.o		\
 		Top/one_file.o Top/opcode.o Top/scot.o Top/threads.o	\
 		Top/utility.o
